# rust-tutorial-api

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20240320000000_create_tasks.sql
src/: db.rs  main.rs
